# daft_shiny

./: pyproject.toml
src/: __init__.py  main.py
