[project]
name = "daft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mehrdad", email = "mehr.lashgari@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "shiny>=1.5.0",
    "streamlit>=1.50.0",
]

[project.scripts]
daft = "daft:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
